# pallet-ocw-protobuf

./: Cargo.toml
pallets/template-protobuf/: Cargo.toml  build.rs
pallets/template-protobuf/src/: lib.rs
pallets/template-protobuf/src/protos/: items.proto
runtime/: Cargo.toml
runtime/src/: lib.rs
